--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,12 +1,20 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:best-practices", ":dependencyDashboard"],
+  "golang": {
+    "enabled": true
+  },
   "packageRules": [
     {
       "automerge": true,
       "automergeStrategy": "merge-commit",
       "matchDepTypes": ["*"],
       "recreateWhen": "always"
+    },
+    {
+      "matchManagers": ["gomod"],
+      "matchDepTypes": ["golang"],
+      "enabled": true
     }
   ],
   "platformAutomerge": true,
