Revert "Update module github.com/hashicorp/hcl to v2 (#27)"
This reverts commit f9d84aa6cf653f62c668518447f53f7f464240e1.

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -13,17 +13,12 @@
     },
     {
       "matchManagers": ["gomod"],
-      "matchDepTypes": ["indirect", "golang"],
+      "matchDepTypes": ["golang"],
       "enabled": true
     }
   ],
   "platformAutomerge": true,
-  "postUpdateOptions": [
-    "gomodTidy",       
-    "gomodTidyE",      
-    "gomodMassage",    
-    "gomodUpdateImportPaths" 
-  ],
+  "postUpdateOptions": ["gomodTidyE", "gomodMassage", "gomodUpdateImportPaths"],
   "prConcurrentLimit": 0,
   "prHourlyLimit": 0
 }
