--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -19,7 +19,7 @@
     }
   ],
   "platformAutomerge": true,
-  "postUpdateOptions": ["gomodTidy", "gomodTidyE", "gomodMassage", "gomodUpdateImportPaths"],
+  "postUpdateOptions": ["gomodTidy", "gomodTidyE", "gomodUpdateImportPaths"],
   "prConcurrentLimit": 0,
   "prHourlyLimit": 0
 }
